--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,6 +20,9 @@
   <meta name="author" content="{{ site.author }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
+  <!-- favicon 추가 -->
+  <link rel="icon" type="image/png" href="{{ '/assets/img/favicon/favicon-32x32.png' | relative_url }}">
+
   <title>{% if page.title %}{{ page.title | append: " | " | append: site.title }}{% else %}{{ site.title }}{% endif %}</title>
 
   <!-- Bootstrap core CSS -->
