--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,9 +9,12 @@
       {%- if site.logo -%}
       <img
         height="{{ site.logo.height | default: 52 }}"
-        src="{{ site.logo.path }}"
+        src="{{ site.logo.path | relative_url }}"
+        alt="{{ site.title }}"
       />
-      {%- else -%} {{ site.title }} {%- endif -%}
+      {%- else -%} 
+        {{ site.title }} 
+      {%- endif -%}
     </a>
     <button
       class="navbar-toggler navbar-toggler-right"
