feat : fb-brans 받기 위해 최신버전 링킹

--- a/_includes/services.html
+++ b/_includes/services.html
@@ -1,4 +1,6 @@
 <!-- Services -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet">
+
 {% if site.locale and site.locale != "" and site.locale != nil %}
   <section class="page-section" id="{{ site.data.sitetext[site.locale].services.section | default: "services" }}">
     <div class="container">
